Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5.16, 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6, 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 11.0(EOL)
-
centos 7.6
-
Can result in hang or crash
-
Q3/2025 Maintenance
Description
Step 1: Create a table and insert data
1. Create database sqltester
create database sqltester
2. Execute the attachment file to create a table and insert data
source sqltester_ for_ parallel_ with_ index.2k_ dp_ 210col.index_ desc.sql
3. Execute the attachment file to create a table and insert data
source sqltester_ for_ parallel_ with_ index_ view_ part_ tab.sql
Step 2: Execute the query plan
source explain_ temp_ sql.sql
Attachments
Issue Links
- is duplicated by
-
MDEV-32607 Server crash on query
-
- Closed
-
- relates to
-
MDEV-30081 Crash with splitting from constant mergeable derived table
-
- Closed
-
-
MDEV-14999 [Draft] Server crashes in optimize_keyuse
-
- Closed
-
-
MDEV-33139 Crash of INSERT SELECT when preparing structures for split optimization
-
- Closed
-