sql/item.h
@@ -6504,6 +6504,19 @@ public:
   { return get_item_copy<Item_direct_view_ref>(thd, this); }
   Item *field_transformer_for_having_pushdown(THD *, uchar *) override
   { return this; }
+  /*
+    Do the same thing as Item_field: if we were referring to a local view,
+    now we refer to somewhere outside of our SELECT.
+  */
+  bool set_fields_as_dependent_processor(void *arg) override
+  {
+    if (!(used_tables() & OUTER_REF_TABLE_BIT))
+    {
+      depended_from= (st_select_lex *) arg;
+      item_equal= NULL;
+    }
+    return 0;
+  }
 };
 
 
